Get kits by serial rather than id.
